--- a/src/app/components/pages/signin/signin.component.html
+++ b/src/app/components/pages/signin/signin.component.html
@@ -1,17 +1,17 @@
 <div class="main-container">
     <div class="s-left">
         <h2 class="s-title">Sign In</h2>
-
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="s-form-group">
             <div class="s-form-validation">
 
                 <label class="label-text" for="email">Email</label>
                 <span class="error-validation"></span>
             </div>
-            
+
             <div class="form-input">
 
-                <input type="text" class="s-form-input" name="email" id="email">
+                <input type="text" formControlName="email" class="s-form-input" name="email" id="email">
             </div>
 
         </div>
@@ -23,11 +23,11 @@
             </div>
             <div class="form-input">
 
-                <input type="password" class="s-form-input" name="password" id="password">
+                <input type="password" formControlName="password" class="s-form-input" name="password" id="password">
             </div>
         </div>
-        
-       
+
+
         <div class="s-form-group s-form-control">
             <div class="s-form-term">
                 <div class="remember-me">
@@ -38,12 +38,14 @@
                 <a href="#" class="forgot-password">Forgot Password?</a>
             </div>
             <div class="btn-links">
-                <input class="btn" type="button" value="Let's Go">
+                <input class="btn"  type="submit" value="Let's Go">
+                <button type="button" class="btn" (click)="goUser()" >user</button>
                 <p>Dont't have an account yet? <a routerLink="signUp">Sign Up</a></p>
             </div>
 
         </div>
-        
+        </form>
+
 
     </div>
     <div class="s-right">
