--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-signup></app-signup> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-header></app-header>
