--- a/src/app/components/pages/verification/verification.component.html
+++ b/src/app/components/pages/verification/verification.component.html
@@ -6,17 +6,19 @@
         <h3>Verification Code</h3>
         <p>Please enter verification code sent to your email address.</p>
 
+        <form [formGroup]="otpForm" (ngSubmit)="sendOtp()">
         <div class="main-content">
             <div class="input-container">
-                <input type="text" autofocus #text1 (keyup)="move($event,'',text1,text2)" maxlength="1" name="value1" class="value" id="value1">
-                <input type="text" #text2 (keyup)="move($event,text1,text2,text3)" maxlength="1" name="value2" class="value" id="value2">
-                <input type="text" #text3 (keyup)="move($event,text2,text3,text4)" maxlength="1" name="value3" class="value" id="value3">
-                <input type="text" #text4 (keyup)="move($event,text3,text4,'')" maxlength="1" name="value4" [autofocus]="true" class="value" id="value4">
+                <input type="text" formControlName="value1" autofocus #text1 (keyup)="move($event,'',text1,text2)" maxlength="1" name="value1" class="value" id="value1">
+                <input type="text" formControlName="value2" #text2 (keyup)="move($event,text1,text2,text3)" maxlength="1" name="value2" class="value" id="value2">
+                <input type="text" formControlName="value3" #text3 (keyup)="move($event,text2,text3,text4)" maxlength="1" name="value3" class="value" id="value3">
+                <input type="text" formControlName="value4" #text4 (keyup)="move($event,text3,text4,'')" maxlength="1" name="value4" [autofocus]="true" class="value" id="value4">
             </div>
             
-            <button class="btn">Verify</button>
+            <button type="submit" class="btn">Verify</button>
             <a class="resend-link" href="#">Resend otp</a>
         </div>
+    </form>
     
     </div>
 
